SERVER-58258 Fix race between 'replSetGetStatus' request and initial syncer clearing state.

(cherry picked from commit f4860f196c4c7cc335955361865f3511d0c73606)